# BasalGanglia

./: ..gitignore.swp  .gitignore  LICENSE  README.org  requirements.txt
.ipynb_checkpoints/: README-checkpoint.org
doc/: Doxyfile.in  conf.py  example.rst  index.rst  setup.rst
doc/api/: index.rst  model.rst  python_utils.rst
doc/examples/: analysis.py  config.yaml  config_connections.yaml  config_input_mode.yaml  config_to_save.yaml  config_weights.yaml  example.yaml
doc/images/: example_network.umdx
src/: CMakeLists.txt  Computation.ipynb  beta_burst.ipynb  bluPSD_saving.ipynb  bluanalysis.ipynb  blulinestatistic-delay.ipynb  blulinestatistic.ipynb  burst.ipynb  dd_path  delay.ipynb  handlingparseg.ipynb  handlingpulse.ipynb  model.cpp  model.hpp  new_Computation.ipynb  new_computation.ipynb  output_D2.pkl  prove.ipynb  python_utils.py  visualization.ipynb
src/.ipynb_checkpoints/: computation-checkpoint.py  handlingparseg-checkpoint.ipynb  main-checkpoint.cpp  model-checkpoint.cpp  new_Computation-checkpoint.ipynb  new_computation-checkpoint.ipynb  prove-checkpoint.ipynb  python_utils-checkpoint.py
